# narou-epub

./: Cargo.toml  LICENSE  app.manifest  build.rs  readme.md  rust-toolchain.toml  third_party_licenses.html
.cargo/: config.toml
src/: chapter.txt  command.rs  horizontal_style.css  indicator.rs  main.rs  sanitize.rs  style.css  title_page.txt  usage.txt  util.rs  uuid.rs
src/epub/: content.txt  escape.rs  id.rs  mod.rs  time.rs
src/json/: lexer.rs  mod.rs  parser.rs  query.rs
src/narou/: episode.rs  episode.txt  error.rs  extract.txt  internet.rs  mod.rs  short_episode.txt  short_extract.txt  unescape.rs
