[package]
name = "narou-epub"
version = "0.3.0"
edition = "2024"
description = "小説家になろうの作品を EPUB3 に変換するツール"
readme = "README.md"
license = "MIT"
authors = ["SaitoAtsushi <maldikulo@gmail.com>"]
publish = false

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinInet",
] }
zip-builder = { git = "https://github.com/SaitoAtsushi/zip-builder.git", tag = "0.1" }

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
